--- a/SnowBoardReview/SnowBoardReview.csproj
+++ b/SnowBoardReview/SnowBoardReview.csproj
@@ -5,7 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="wwwroot\" />
+    <Folder Include="Views\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\CSS\_layoutStyle.css" />
   </ItemGroup>
 
   <ItemGroup>
