--- a/SnowBoardReview/SnowBoardReview.csproj
+++ b/SnowBoardReview/SnowBoardReview.csproj
@@ -29,6 +29,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Views\SnowboardReview\" />
+    <Folder Include="Views\Review\" />
+    <Folder Include="Views\Snowboard\" />
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
